@@ -87,3 +87,6 @@ net.sf.jasperreports.text.measurer.factory.default=net.sf.jasperreports.engine.f
 
 #Do not keep whole original text in print objects
 net.sf.jasperreports.print.keep.full.text=false
+
+#Do not truncate texts at character
+net.sf.jasperreports.truncate.at.char=false
